--- a/examples/gltf-viewer.html
+++ b/examples/gltf-viewer.html
@@ -2,7 +2,7 @@
 <meta charset="utf-8">
 <html>
     <head>
-        <title>.tilt Viewer | Icosa Viewer</title>
+        <title>.gltf/.glb Viewer | Icosa Viewer</title>
         <style>
             html, body {
                 height: 100%;
