fix tilt example

--- a/examples/tilt-viewer.html
+++ b/examples/tilt-viewer.html
@@ -27,7 +27,7 @@
             import { Viewer } from "../../dist/icosa-viewer.module.js";
 
             var viewer = new Viewer();
-            viewer.load("c_l71DaVU_3");
+            viewer.loadPolyTilt("https://poly.google.com/view/c_l71DaVU_3");
         </script>
         <div id="icosa-viewer"></div>
     </body>
