--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </head>
     <body>
         <script type="module-shim">
-            import { Viewer } from "icosa-viewer.module.js";
+            import { Viewer } from "./icosa-viewer.module.js";
             import { GUI } from 'three/examples/jsm/libs/dat.gui.module.js';
 
             const viewer = new Viewer();
