--- a/examples/index.html
+++ b/examples/index.html
@@ -10,22 +10,11 @@
                 margin: 0;
             }
         </style>
-        <script defer src="https://unpkg.com/es-module-shims@0.4.6/dist/es-module-shims.js"></script>
-        <script type="importmap-shim">
-            {
-                "imports": {
-                    "three": "https://unpkg.com/three@0.125.0/build/three.module.js",
-                    "three/examples/jsm/" : "https://unpkg.com/three@0.125.0/examples/jsm/",
-                    "camera-controls" : "https://unpkg.com/camera-controls@1.27.0/dist/camera-controls.module.js",
-                    "hold-event" : "https://unpkg.com/hold-event@0.0.1/dist/hold-event.module.js"
-                }
-            }
-        </script>
     </head>
     <body>
-        <script type="module-shim">
+        <script type="module">
             import { Viewer } from "../dist/icosa-viewer.module.js";
-            import { GUI } from 'three/examples/jsm/libs/dat.gui.module.js';
+            import { GUI } from "https://unpkg.com/three@0.125.0/examples/jsm/libs/dat.gui.module.js";
 
             const viewer = new Viewer();
             viewer.loadPolyUrl("https://poly.google.com/view/c_l71DaVU_3");
