--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </head>
     <body>
         <script type="module">
-            import { Viewer } from "../dist/icosa-viewer.module.js";
+            import { Viewer } from "./icosa-viewer.module.js";
             import { GUI } from "https://unpkg.com/three@0.125.0/examples/jsm/libs/dat.gui.module.js";
 
             const viewer = new Viewer();
