icosa loader uses correct gltf format

--- a/examples/icosa-viewer.html
+++ b/examples/icosa-viewer.html
@@ -16,7 +16,7 @@
             import { Viewer } from "../dist/icosa-viewer.module.js";
 
             var viewer = new Viewer();
-            viewer.loadIcosaAsset("G_WTGnTuLZU", "kvVuKTFPTxM");
+            viewer.loadIcosaAsset("icosagallery", "kvVuKTFPTxM");
         </script>
         <div id="icosa-viewer"></div>
     </body>
