--- a/examples/gltf-viewer-legacy.html
+++ b/examples/gltf-viewer-legacy.html
@@ -16,7 +16,7 @@
             import { Viewer } from "../dist/icosa-viewer.module.js";
 
             var viewer = new Viewer();
-            viewer.loadBrushGltf("test.glb");
+            viewer.loadBrushGltf1("sketch.gltf");
 
         </script>
         <div id="icosa-viewer"></div>
