revamed examples files

--- a/examples/tilt-viewer.html
+++ b/examples/tilt-viewer.html
@@ -16,7 +16,7 @@
             import { Viewer } from "../dist/icosa-viewer.module.js";
 
             var viewer = new Viewer();
-            viewer.loadPolyTilt("https://poly.google.com/view/c_l71DaVU_3");
+            viewer.loadTilt("formats/tilt/all_brushes.tilt");
         </script>
         <div id="icosa-viewer"></div>
     </body>
