--- a/tilt-viewer.html
+++ b/tilt-viewer.html
@@ -13,7 +13,7 @@
     </head>
     <body>
         <script type="module">
-            import { Viewer } from "../dist/icosa-viewer.module.js";
+            import { Viewer } from "./icosa-viewer.module.js";
 
             var viewer = new Viewer();
             viewer.loadTilt("formats/tilt/all_brushes.tilt");
