--- a/gltf-viewer.html
+++ b/gltf-viewer.html
@@ -13,7 +13,7 @@
     </head>
     <body>
         <script type="module">
-            import { Viewer } from "../dist/icosa-viewer.module.js";
+            import { Viewer } from "./icosa-viewer.module.js";
 
             var viewer = new Viewer();
             await viewer.loadBrushGltf("formats/gltf2/all_brushes.glb");
