--- a/examples/index.html
+++ b/examples/index.html
@@ -12,7 +12,7 @@
 
             #dropmessage {
                 position: absolute;
-                font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+                font-family: 'Courier New', Courier, monospace;
                 color: #009962;
                 width: 100%;
                 padding-top: 2em;
