use test version of three-tiltloader

--- a/examples/gltf1-viewer.html
+++ b/examples/gltf1-viewer.html
@@ -16,7 +16,7 @@
             import { Viewer } from "../dist/icosa-viewer.module.js";
 
             var viewer = new Viewer();
-            await viewer.loadBrushGltf1("formats/gltf1/all_brushes.gltf");
+            await viewer.loadGltf1("formats/gltf1/all_brushes.gltf");
 
         </script>
         <div id="icosa-viewer"></div>
