--- a/examples/gltf1-viewer.html
+++ b/examples/gltf1-viewer.html
@@ -15,7 +15,7 @@
         <script type="module">
             import { Viewer } from "../dist/icosa-viewer.module.js";
 
-            var viewer = new Viewer();
+            var viewer = new Viewer("https://icosa-gallery.github.io/three-icosa-template/brushes/");
             await viewer.loadGltf1("formats/gltf1/all_brushes.gltf");
 
         </script>
