--- a/examples/tilt-viewer.html
+++ b/examples/tilt-viewer.html
@@ -15,8 +15,8 @@
         <script type="module">
             import { Viewer } from "../dist/icosa-viewer.module.js";
 
-            var viewer = new Viewer();
-            await viewer.loadTiltRaw("formats/tilt/all_brushes.tilt");
+            var viewer = new Viewer("https://icosa-gallery.github.io/three-icosa-template/brushes/");
+            await viewer.loadTilt("formats/tilt/all_brushes.tilt");
         </script>
         <div id="icosa-viewer"></div>
     </body>
