Update brush file urls in the examples

--- a/examples/index.html
+++ b/examples/index.html
@@ -31,7 +31,7 @@
         <script type="module">
             import { Viewer } from "../dist/icosa-viewer.module.js";
 
-            const viewer = new Viewer("https://icosa-gallery.github.io/three-icosa-template/brushes/");
+            const viewer = new Viewer("https://icosa-foundation.github.io/brushes/");
             viewer.loadGltf("formats/gltf2/all_brushes.glb");
 
             const viewerdiv = document.getElementById("icosa-viewer");
