--- a/examples/tilt-viewer.html
+++ b/examples/tilt-viewer.html
@@ -15,7 +15,7 @@
         <script type="module">
             import { Viewer } from "../dist/icosa-viewer.module.js";
 
-            var viewer = new Viewer("https://icosa-gallery.github.io/three-icosa-template/brushes/");
+            var viewer = new Viewer("https://icosa-foundation.github.io/brushes/");
             await viewer.loadTilt("formats/tilt/all_brushes.tilt");
         </script>
         <div id="icosa-viewer"></div>
