--- a/examples/gltf-viewer.html
+++ b/examples/gltf-viewer.html
@@ -15,7 +15,7 @@
         <script type="module">
             import { Viewer } from "../dist/icosa-viewer.module.js";
 
-            var viewer = new Viewer("https://icosa-gallery.github.io/three-icosa-template/brushes/");
+            var viewer = new Viewer("https://icosa-foundation.github.io/brushes/");
             await viewer.loadGltf("formats/gltf2/all_brushes.glb");
 
         </script>
