--- a/examples/new-viewer.html
+++ b/examples/new-viewer.html
@@ -13,10 +13,6 @@
         <script type="importmap" class="es6_modules_map">
             {
                 "imports": {
-                    "camera-controls": "../dist/lib/camera-controls.module.js",
-                    "hold-event": "../dist/lib/hold-event.module.js",
-                    "three-icosa": "../dist/lib/three-icosa.module.js",
-                    "three-tiltloader": "../dist/lib/three-tiltloader.module.js",
                     "three": "https://cdn.jsdelivr.net/npm/three@0.164.0/build/three.module.js",
                     "three/addons/": "https://cdn.jsdelivr.net/npm/three@0.164.0/examples/jsm/",
                     "three/examples/": "https://cdn.jsdelivr.net/npm/three@0.164.0/examples/"
@@ -27,16 +23,16 @@
     </head>
     <body>
         <script type="module">
-            import { Viewer } from "../dist/viewer.js";
-            import { GUI } from 'three/addons/libs/lil-gui.module.min.js';
             import * as three from "three";
+            import { Viewer } from "../dist/icosa-viewer.module.js";
+            import { GUI } from 'three/addons/libs/lil-gui.module.min.js';
 
             var viewer = new Viewer("https://icosa-foundation.github.io/icosa-sketch-assets/");
 
-            await viewer.loadGltf("formats/gltf2/gradient.gltf", true);
+            // await viewer.loadGltf("formats/gltf2/gradient.gltf", true);
             // await viewer.loadGltf("formats/gltf2/snowman.gltf", true);
             // await viewer.loadGltf("formats/gltf2/old-story.gltf", true);
-            // await viewer.loadGltf("formats/gltf2/all_brushes.glb", true);
+            await viewer.loadGltf("formats/gltf2/all_brushes.glb", true);
 
             const gui = new GUI( );
 
